<resources>
    <string name="app_name">First application</string>
    <string name="common_back_alert_dialog_text">Введенные данные пропадут</string>
    <string name="common_back_alert_dialog_cancel_button_text">Отменить</string>
    <string name="common_back_alert_dialog_ok_button_text">Ок</string>
    <string name="onboarding_view_pager_text_1">Добро пожаловать в нашу скромную обитель</string>
    <string name="onboarding_view_pager_text_2">Присоединяйтесь к нам</string>
    <string name="onboarding_view_pager_text_3">И живите счастливо</string>
    <string name="onboarding_sign_in_button_text">Найти договор</string>
    <string name="onboarding_sign_up_button_text">Подписать кровью</string>
    <string name="sign_in_sing_in_button_text">Войти</string>
    <string name="sign_in_email_text_layout_hint">Почта</string>
    <string name="sign_in_password_text_layout_hint">Пароль</string>
    <string name="sign_in_back_alert_dialog_text">Введенные данные пропадут</string>
    <string name="sign_in_back_alert_dialog_cancel_button_text">Отменить</string>
    <string name="sign_in_back_alert_dialog_ok_button_text">Ок</string>
    <string name="sign_up_club_rules">правила клуба</string>
    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_nickname_text_layout_hint">Имя пользователя</string>
    <string name="sign_up_email_text_layout_hint">Почта</string>
    <string name="sign_up_under_nickname_text">Ваш никнейм будет виден другим пользователям</string>
    <string name="sign_up_under_email_text">Ваша почта видна только вам</string>
    <string name="sign_up_password_text_layout_hint">Пароль</string>
    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
    <string name="news_toolbar_title">Main news</string>
    <string name="profile_logout_button_text">Logout</string>
    <string name="common_counter_prefix">+%1$d</string>
    <string name="email_confirmation_send_code_again">Отправить код еще раз</string>
    <string name="email_confirmation_send_information">Осталось t секунд</string>
    <string name="general_error">ERROR</string>
    <string name="email_confirmation_button_text">Подтвердить</string>

</resources>